--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
     "styled-components": "^6.1.13",
